--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.0",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "nesbot/carbon": "^2.57",
         "spatie/laravel-permission": "^5.5",
         "tymon/jwt-auth": "^1.0",
